--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <input
                       id="font-size"
                       min="0"
-                      step="0.5"
+                      step="0.01"
                       value="10"
                       type="number"
                     />
@@ -292,7 +292,7 @@
                 <div class="category-grid">
                   <div class="postfix-input" data-postfix="px">
                     <label for="top-padding">Vertical Position</label>
-                    <input id="top-padding" min="0" value="5" type="number" />
+                    <input id="top-padding" min="0" step="0.01" value="5" type="number" />
                   </div>
                   <div class="postfix-input" data-postfix="px">
                     <label for="word-spacing">Word Spacing</label>
